--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="change_layout">Change Layout</string>
     <string name="list">List</string>
     <string name="grid">Grid</string>
+    <string name="title">Title</string>
+    <string name="save">Save</string>
 </resources>
